# experiments

./: .clang-format  .gitignore  CMakeLists.txt  config.txt
src/: gen.cpp  main.cpp  ogdf-drawer.cpp  ogdf-drawer.hpp
src/experiments/: experiments.hpp  ogdf.cpp  ogdf.hpp  shape_metrics.cpp  shape_metrics.hpp
src/experiments/ogdf-drawer/: drawer.cpp  drawer.hpp
